--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-PRODUCTION_URL=https://newsletter-backend.herokuapp.com/
-DEVELOPMENT_URL=http://localhost:9000/
+PRODUCTION_URL=https://newsletter-backend.herokuapp.com
+DEVELOPMENT_URL=http://localhost:9000
+
+MODE=PROD
